welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: ')' expected but 'false' found.
while(estFaceMur()==false && estSur Biscuit==false){
                                             ^DwarfCode:27: error: illegal start of simple expression
	}
        ^