welcome.lessons.welcome.summative.Moria.scala.code


while(estFaceMur()==false && estSur Biscuit==false){
  setDirection(plm.universe.Direction.EST)
  while (estSurBiscuit==false && estFaceMur==false){     
    
    avance()
  }
  if (porteBiscuit==false){
    prendBiscuit();retourne()
  }
  
  
  while (estSurBiscuit==false){
    avance()
  }
  recule();poseBiscuit()
  retourne();avance()
  while (estSurBiscuit==false && estFaceMur==false){       	 
    
    avance()
  }
}

droite();avance();gauche();avance()